force-app/main/default/objects/ssot__RecruitmentRequisitionLocation__dlm/fields/ssot__RecruitmentRequisitionId__c.field-meta.xml
<CustomField>
    <fullName>ssot__RecruitmentRequisitionId__c</fullName>
    <label>Recruitment Requisition</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RecruitmentRequisitionId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>