force-app/main/default/objects/ssot__RecruitmentRequisitionLocation__dlm/fields/ssot__rel_1723128942232_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1723128942232_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RecruitmentRequisitionLocation_Locat_rel</label>
    <referenceTo>ssot__Location__dlm</referenceTo>
    <relationshipLabel>RecruitmentRequisitionLocation_Locat_rel</relationshipLabel>
    <relationshipName>rel_1723128942232_end</relationshipName>
    <type>Lookup</type>
</CustomField>